--- a/main.ipynb
+++ b/main.ipynb
@@ -2,30 +2,33 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import required libraries\n",
+    "import sys\n",
     "import os\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from lib import *\n",
     "\n",
-    "from lib.image_processing import load_tiff_stack, moving_average_subtraction, identify_particles\n",
-    "from lib.particle_tracking import extract_roi, track_particles\n",
-    "from lib.visualization import ParticleVisualizer\n",
-    "from lib.config import directory_setup"
+    "# Add the lib directory to Python's search path\n",
+    "sys.path.append(os.path.abspath(\"lib\"))\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Now import your modules\n",
+    "from lib import image_processing as ip\n",
+    "from lib import particle_tracking as pt\n",
+    "from lib import visualization as vs\n",
+    "from lib import config as cfg"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dir_Path = './'\n",
-    "Path, ID, X, Y, Sframe, Eframe = f'{dir_Path}/Streams/Cell1_S1.tif', 'P1_C1_S1_11', 685, 660, 1, 300\n",
+    "dir_Path = '.'\n",
+    "Path, ID, X, Y, Sframe, Eframe = f'{dir_Path}\\Streams\\Cell1_S1.tif', 'P1_C1_S1_11', 685, 660, 1, 300\n",
     "stackPath, stackFile = os.path.split(Path)\n",
     "startColX = X\n",
     "startRowY = Y\n",
@@ -36,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -45,10 +48,21 @@
      "text": [
       "  \n"
      ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "cannot unpack non-iterable NoneType object",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[54]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m x,y,z, = cfg.directory_setup(stackPath, stackFile, particleID, startColX, startRowY, X, Y)\n",
+      "\u001b[31mTypeError\u001b[39m: cannot unpack non-iterable NoneType object"
+     ]
     }
    ],
    "source": [
-    "directory_setup(stackPath, stackFile, particleID, startColX, startRowY, X, Y)"
+    "x,y,z, = cfg.directory_setup(stackPath, stackFile, particleID, startColX, startRowY, X, Y)"
    ]
   },
   {
