--- a/denosing_ml_v2.ipynb
+++ b/denosing_ml_v2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "V28"
+      "gpuType": "V28",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -19,15 +20,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github"
+        "id": "view-in-github",
+        "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/bc2026/DenoisingSIAIML/blob/main/denosing_ml.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/bc2026/DenoisingSIAIML/blob/main/denosing_ml_v2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -65,7 +67,7 @@
         },
         "outputId": "f4c9504b-7f6d-4dc6-f474-a0ebd054274d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -92,7 +94,7 @@
       "metadata": {
         "id": "0jKcHss_rCHV"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -108,7 +110,7 @@
       "metadata": {
         "id": "bmvqDktOsiN5"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -120,7 +122,7 @@
       "metadata": {
         "id": "5USb3M7AycOA"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +139,7 @@
         "id": "4tu6XlEisPUE",
         "outputId": "385945e3-2719-45fa-d95d-c16767e3dc5e"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -160,7 +162,7 @@
       "metadata": {
         "id": "ypMIyoz0uxeI"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -199,7 +201,7 @@
       "metadata": {
         "id": "1MOFCrL-vP9V"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -210,7 +212,7 @@
       "metadata": {
         "id": "HwA9JADqmxse"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -228,7 +230,7 @@
         "id": "hKQAfRQk4dKw",
         "outputId": "916fca21-7907-408a-8627-088d2f64cb0e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -618,7 +620,7 @@
       "metadata": {
         "id": "QLCH8E9KoC8v"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -638,7 +640,7 @@
         "id": "7R2NoO_el-nb",
         "outputId": "6d926015-9aed-4c46-fb63-26e504813c67"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -765,7 +767,7 @@
         },
         "outputId": "293a6357-1bfb-4245-89ad-11da2fc1f28b"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -811,7 +813,7 @@
       "metadata": {
         "id": "YHtH_DaVXu1-"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -853,7 +855,7 @@
         },
         "outputId": "1f62c838-f15e-4704-ad58-a772a255ae9f"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -913,15 +915,6 @@
           "metadata": {}
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "fvn8Yz1pK2Oc"
-      },
-      "execution_count": 15,
-      "outputs": []
     }
   ]
 }
